[gd_scene load_steps=2 format=3 uid="uid://cpytob4afa3g2"]

[ext_resource type="Script" path="res://Menu/Scenes/Game.gd" id="1_yuqpy"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yuqpy")

[node name="PacHomeMolecules2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="MarginContainer" type="MarginContainer" parent="PacHomeMolecules2"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ColorRect" type="ColorRect" parent="PacHomeMolecules2/MarginContainer"]
layout_direction = 1
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PacHomeMolecules2"]
clip_contents = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 633.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PacHomeMolecules2/MarginContainer2"]
layout_mode = 2

[node name="Left" type="MarginContainer" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer/Left"]
clip_contents = true
layout_mode = 2
all_tabs_in_front = true
use_hidden_tabs_for_min_size = true

[node name="1" type="TabBar" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer/Left/TabContainer"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2

[node name="2" type="TabBar" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer/Left/TabContainer"]
visible = false
layout_mode = 2

[node name="Right" type="MarginContainer" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Matter2" type="Button" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer/Right"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 0

[node name="CanvasLayerMatter2" type="CanvasLayer" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer/Right"]

[node name="Button" type="Button" parent="PacHomeMolecules2/MarginContainer2/HBoxContainer/Right/CanvasLayerMatter2"]
offset_left = 805.0
offset_top = 54.0
offset_right = 1051.0
offset_bottom = 206.0
text = "Test
"

[connection signal="mouse_entered" from="PacHomeMolecules2/MarginContainer2/HBoxContainer/Right/Matter2" to="." method="_on_matter_2_mouse_entered"]
[connection signal="mouse_exited" from="PacHomeMolecules2/MarginContainer2/HBoxContainer/Right/Matter2" to="." method="_on_matter_2_mouse_exited"]
